--- a/index.html
+++ b/index.html
@@ -4,41 +4,67 @@
   <meta charset="UTF-8" />
   <title>Image Hover Preview</title>
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 20px;
+      background-color: #f9f9f9;
+    }
+
+    h2 {
+      margin-bottom: 20px;
+    }
+
     #image {
       background-color: #eeeeee;
       height: 300px;
-      width: 100%;
+      width: 80%;
+      max-width: 800px;
+      margin: 0 auto 30px auto;
       text-align: center;
       line-height: 300px;
-      font-size: 20px;
+      font-size: 24px;
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
       color: black;
-      border: 1px solid #ccc;
-      margin-bottom: 20px;
+      border: 2px solid #ccc;
     }
+
     .preview {
-      width: 100px;
+      width: 150px;
       height: auto;
-      margin: 5px;
-      border: 2px solid transparent;
+      margin: 10px;
+      border: 3px solid transparent;
+      transition: border 0.3s ease;
     }
+
     .preview:hover {
-      border: 2px solid #888;
+      border: 3px solid #888;
       cursor: pointer;
+    }
+
+    .gallery {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 10px;
     }
   </style>
 </head>
 <body>
 
 <h2>Hover over an image below to display here.</h2>
+
 <div id="image">Hover over an image below to display here.</div>
 
-<!-- Thứ tự: đỏ (1.jpg), xanh lá (3.jpg), xanh dương (2.png) -->
-<img class="preview" src="1.jpg" alt="This is red" onmouseover="upDate(this)" onmouseout="undo()">
-<img class="preview" src="3.jpg" alt="This is green" onmouseover="upDate(this)" onmouseout="undo()">
-<img class="preview" src="2.png" alt="This is blue" onmouseover="upDate(this)" onmouseout="undo()">
+<div class="gallery">
+  <!-- Đúng thứ tự: đỏ, xanh lá, xanh dương -->
+  <img class="preview" src="1.jpg" alt="This is red" onmouseover="upDate(this)" onmouseout="undo()">
+  <img class="preview" src="3.jpg" alt="This is green" onmouseover="upDate(this)" onmouseout="undo()">
+  <img class="preview" src="2.png" alt="This is blue" onmouseover="upDate(this)" onmouseout="undo()">
+</div>
 
 <script src="script.js"></script>
 </body>
